# autonomous-vehicle-MDS

./: README.md  get_imu.cpp
main_control/src/: controller_serial_pangyo.py  get_enc_steer_control.py  get_encodom_and_control.py  test.py
mapviz_robotmove/: CMakeLists.txt  package.xml
mapviz_robotmove/launch/: robotmove.launch
mapviz_robotmove/src/: tf_broadcast.cpp
pangyo_control/: CMakeLists.txt  package.xml
pangyo_control/gps_data/: gps_data_kcity_test_0901.txt  gps_data_kcity_test_0901_2.txt  gps_data_kcity_test_0901_final_1.txt  gps_data_middle.txt  gps_fronteer.txt  hightech_seongje.txt  test2.txt  university.txt
pangyo_control/msg/: ControlCommand.msg  figure.msg  figure_array.msg  steer_step.msg
pangyo_control/src/: contour_figure_ros.py  estimate_tf.cpp  get_imu.cpp  gps_data_pangyo.py  makefile.inc.txt  parking_node_num1.py
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: display.launch  display_2.launch
robot_description/meshes/: base_link.STL  laser_link.STL
robot_description/rviz/: Autourdf.rviz
robot_description/urdf/: platform_base_allink.urdf
stauto_control/: CMakeLists.txt  package.xml
stauto_control/src/: ERP42_to_PC.cpp  ERP42_to_PC.py  PC_to_ERP42.py  get_enc_and_control.py  middlebridge.py  serial control.py
stauto_sensor/: CMakeLists.txt  package.xml  setup.py
stauto_sensor/launch/: HyphaROS_MiniCar_Racing.launch  STauto_Racing.launch  stauto_sensor.launch  stauto_setting.launch
stauto_sensor/map/: frontier.pgm  frontier.yaml  library.yaml  map.yaml
stauto_sensor/rviz/: sensor.rviz  (+2 more)
(+13 files in other folders)
