<package>
  <name>robot_description</name>
  <version>0.4.0</version>

  <description>This package contains a number of URDF tutorials.</description>
  <author email="yungsikchoi0103@gmail.com">CHOI</author>

  <maintainer email="yungsikchoi0103@gmail.com">CHOI</maintainer>

  <license>CHOI</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
